# HoYo-Discord-Bot

./: Cargo.toml  README.MD
migrations/: 20230112223826_initial_migration.sql
src/: main.rs
src/commands/: accounts.rs  claim_code.rs  claim_daily.rs  link.rs  mod.rs  submitcode.rs  unlink.rs
