[package]
name = "hoyo-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hoyo-api = { path = "../hoyo-api" }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "offline", "macros"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
